Bdd files for customer and Admin with step defination  and method

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,8 +1,8 @@
-appiumURL=http://127.0.0.1:4723
+appiumURL=http://192.168.0.45/wd/hub
 androidAutomationName=UiAutomator2
-androidAppPackage=com.swaglabsmobileapp
-androidAppActivity=com.swaglabsmobileapp.SplashActivity
-androidAppLocation=/app/Android.SauceLabs.Mobile.Sample.app.2.7.1.apk
+androidAppPackage=com.doshaheen.shoal.dev
+androidAppActivity=com.doshaheen.shoal.MainActivity
+androidAppLocation=/app/shoal-admin.apk
 iOSAutomationName=XCUITest
 iOSBundleId=org.askomdch.SwagLabMobileApp
 iOSAppLocation=/app/SwagLabsMobileApp.app
